--- a/app/dockerfile
+++ b/app/dockerfile
@@ -18,6 +18,8 @@ RUN --mount=type=cache,target=/root/.cache/uv \
 # Estágio final
 FROM python:3.11-slim
 
+RUN apt-get update && apt-get install -y curl && rm -rf /var/lib/apt/lists/*
+
 RUN mkdir /code
 
 # Copia o arquivo de dependências e instala
@@ -38,4 +40,4 @@ WORKDIR /code
 EXPOSE 80
 
 # Inicia a aplicação via Uvicorn
-CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "80"]
+CMD ["python", "-m", "uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "80"]
