--- a/ui/dockerfile
+++ b/ui/dockerfile
@@ -6,10 +6,14 @@ WORKDIR /code
 COPY ../pyproject.toml .
 COPY ../uv.lock .
 
-# Install uv
+# Install uv tool
 RUN pip install uv
 
+# Sync only UI dependencies into local .venv
 RUN uv sync --frozen --no-install-project --no-dev --no-cache --only-group ui
+
+# Add venv scripts to PATH to expose streamlit
+ENV PATH="/code/.venv/bin:$PATH"
 
 # Copy UI code
 COPY ./ui /code/ui
