--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,8 @@ dependencies = [
     "kink==0.8.1",
     "langchain-groq==0.3.1",
     "requests==2.31.0",
+    "python-multipart==0.0.20", 
+    "ipykernel"
 ]
 
 [dependency-groups]
