--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,30 @@
-.env
+# Test documents
 case_files/
+
+# Python cache files
+__pycache__/
+*.py[cod]
+*$py.class
+
+# PyInstaller
+*.manifest
+*.spec
+
+# Unit test / coverage reports
+htmlcov/
+.tox/
+.coverage
+.coverage.*
+.cache
+nosetests.xml
+coverage.xml
+*.cover
+.hypothesis/
+.pytest_cache/
+
+# Environments
+.venv
+.env
+
+# IDE
+.vscode/
