--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,10 @@ services:
     networks:
       - chat-pdf-network
     working_dir: /code
+    volumes:
+      - ./app:/code/app
+      - ./pyproject.toml:/code/pyproject.toml
+      - ./uv.lock:/code/uv.lock
     command:
       [
         "sh",
@@ -26,6 +30,8 @@ services:
     container_name: chat-pdf-frontend
     ports:
       - "8501:8501"
+    volumes:
+      - ./ui:/code/ui
     environment:
       - API_BASE_URL=http://backend:8000
       - STREAMLIT_SERVER_PORT=8501
