--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,7 @@ dependencies = [
     "langchain==0.3.18",
     "uvicorn==0.28.0",
     "langchain-openai==0.3.6",
-    "langchain-core==0.3.47",
+    "langchain-core==0.3.51",
     "langgraph==0.3.18",
     "langchain-google-genai==2.0.9",
     "langchain-community==0.3.17",
@@ -18,7 +18,11 @@ dependencies = [
     "langchain-groq==0.3.1",
     "requests==2.31.0",
     "python-multipart==0.0.20", 
-    "ipykernel"
+    "pymupdf4llm==0.0.24",
+    "langchain-text-splitters==0.3.8",
+    "ipykernel",
+    "pinecone-client>=3.0.0",
+    "sentence-transformers>=2.0.0",
 ]
 
 [dependency-groups]
