--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,9 +20,10 @@ dependencies = [
     "python-multipart==0.0.20", 
     "pymupdf4llm==0.0.24",
     "langchain-text-splitters==0.3.8",
+    "pinecone==7.0.1",
+    "python-dotenv==1.0.1",
     "ipykernel",
-    "pinecone-client>=3.0.0",
-    "sentence-transformers>=2.0.0",
+    "transformers"
 ]
 
 [dependency-groups]
