--- a/ui/dockerfile
+++ b/ui/dockerfile
@@ -26,6 +26,7 @@ ENV STREAMLIT_SERVER_PORT=8501
 ENV STREAMLIT_SERVER_ADDRESS=0.0.0.0
 ENV STREAMLIT_SERVER_HEADLESS=true
 ENV STREAMLIT_BROWSER_GATHER_USAGE_STATS=false
+ENV STREAMLIT_SERVER_MAX_UPLOAD_SIZE=50
 
 # Start Streamlit
 CMD ["streamlit", "run", "ui/chat.py"]
