--- a/app/dockerfile
+++ b/app/dockerfile
@@ -18,7 +18,19 @@ RUN --mount=type=cache,target=/root/.cache/uv \
 # Estágio final
 FROM python:3.11-slim
 
-RUN apt-get update && apt-get install -y curl && rm -rf /var/lib/apt/lists/*
+RUN apt-get update && apt-get install -y \
+    tesseract-ocr \
+    tesseract-ocr-por \
+    tesseract-ocr-eng \
+    tesseract-ocr-spa \
+    ghostscript \
+    poppler-utils \
+    libglib2.0-0 \
+    libsm6 \
+    libxrender1 \
+    libxext6 \
+    && rm -rf /var/lib/apt/lists/*
+
 
 RUN mkdir /code
 
