--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,13 +17,14 @@ dependencies = [
     "kink==0.8.1",
     "langchain-groq==0.3.1",
     "requests==2.31.0",
-    "python-multipart==0.0.20", 
+    "python-multipart==0.0.20",
     "pymupdf4llm==0.0.24",
     "langchain-text-splitters==0.3.8",
     "pinecone==7.0.1",
     "python-dotenv==1.0.1",
-    "ipykernel",
-    "transformers"
+    "transformers==4.50.0",
+    "ocrmypdf==16.10.2",
+    "pytesseract==0.3.13"
 ]
 
 [dependency-groups]
@@ -31,5 +32,5 @@ lint = [
     "ruff>=0.11.13",
 ]
 ui = [
-    "streamlit==1.27.0",
+    "streamlit==1.45.1",
 ]
